--- a/our-educational-institute.html
+++ b/our-educational-institute.html
@@ -312,7 +312,7 @@
 
     <div class="inst-page-head">
       <h1>Our Institutes</h1>
-      <p>Image first. Details below. Clean look.</p>
+      <p>KUMSS</p>
     </div>
 
     <div class="inst-grid">
@@ -332,7 +332,7 @@
 
       <a class="inst-card clean" href="#" target="_blank" rel="noopener">
         <div class="inst-img">
-          <img src="/assets/institute.avif" alt="New English School, Dhakale campus">
+          <img src="/assets/institute2.avif" alt="New English School, Dhakale campus">
         </div>
 
         <div class="inst-body">
@@ -345,7 +345,7 @@
 
       <a class="inst-card clean" href="#" target="_blank" rel="noopener">
         <div class="inst-img">
-          <img src="/assets/institute.avif" alt="Primary School, Tembha campus">
+          <img src="/assets/institute3.avif" alt="Primary School, Tembha campus">
         </div>
 
         <div class="inst-body">
@@ -358,7 +358,7 @@
 
       <a class="inst-card clean" href="#" target="_blank" rel="noopener">
         <div class="inst-img">
-          <img src="/assets/institute.avif" alt="KUMSS Private I.T.I Karhati campus">
+          <img src="/assets/institute4.jpg" alt="KUMSS Private I.T.I Karhati campus">
         </div>
 
         <div class="inst-body">
@@ -371,7 +371,7 @@
 
       <a class="inst-card clean" href="#" target="_blank" rel="noopener">
         <div class="inst-img">
-          <img src="/assets/institute.avif" alt="Gurukul English Medium School campus">
+          <img src="/assets/institute5.avif" alt="Gurukul English Medium School campus">
         </div>
 
         <div class="inst-body">
@@ -384,7 +384,7 @@
 
       <a class="inst-card clean" href="#" target="_blank" rel="noopener">
         <div class="inst-img">
-          <img src="/assets/institute.avif" alt="Shardabai Pawar Kala Mahavidhyalaya campus">
+          <img src="/assets/institute7.avif" alt="Shardabai Pawar Kala Mahavidhyalaya campus">
         </div>
 
         <div class="inst-body">
